Updated index.html, style.css

--- a/index.html
+++ b/index.html
@@ -21,24 +21,24 @@
         </div>
     </nav>
     <div class="headerContent">
-        <img src="images/login_background2x.png" class="header-img">
+        <img src="images/login_background2x.png" class="header-img initialAnimation1">
         <div class="headerDescription">
-            <h1>Now interaction is more<br>entertaining than ever</h1>
-            <p>Make new memories with<br>new people every day</p>
+            <h1 class="initialAnimation2">Now interaction is more<br>entertaining than ever</h1>
+            <p class="initialAnimation2">Make new memories with<br>new people every day</p>
         </div>
     </div>
     <div class="featureContent">
-        <h2>Five reasons<br>why</h2>
-        <h1>MixCuss</h1>
+        <h2 class="scrollAnimationMoveLeft">Five reasons<br>why</h2>
+        <h1 class="scrollAnimationMoveLeft">MixCuss</h1>
     </div>
     <div class="featureDescription reasonZero">
         <div class="reasonZero1">
-            <div class="reasonZero1ContentWrapper">
+            <div class="reasonZero1ContentWrapper scrollAnimationMoveRight2">
                 <h2>Nothing</h2>
             </div>
         </div>
         <div class="reasonZero2">
-            <div class="reasonZero2ContentWrapper">
+            <div class="reasonZero2ContentWrapper scrollAnimationMoveLeft2">
                 <h2>just for<br>something </h2>
                 <h1>New</h1>
             </div>
@@ -49,13 +49,13 @@
         <div class="reasonDescription reasonDescription1">
             <h2>We </h2><h1>do not store</h1><h2> mobile numbers in the </h2><h1>user details</h1><h2>. So, no one can access your </h2><h1>contact number.</h1>
         </div>
-        <div class="reasonKey reasonKey1">
+        <div class="reasonKey reasonKey1 scrollAnimationScale">
             <h1>Privacy</h1>
         </div>
     </div>
     <div class="featureSeparator"></div>
     <div class="featureDescription">
-        <div class="reasonKey reasonKey2">
+        <div class="reasonKey reasonKey2 scrollAnimationScale">
             <h1>Security</h1>
         </div>
         <div class="reasonDescription reasonDescription2">
@@ -67,13 +67,13 @@
         <div class="reasonDescription reasonDescription3">
             <h2>You do not need to </h2><h1>share</h1><h2> your </h2><h1>contact number</h1><h2> to interact with others and </h2><h1>your digital life</h1><h2> is in </h2><h1>your control</h1>
         </div>
-        <div class="reasonKey reasonKey3">
+        <div class="reasonKey reasonKey3 scrollAnimationScale">
             <h1>Control</h1>
         </div>
     </div>
     <div class="featureSeparator"></div>
     <div class="featureDescription">
-        <div class="reasonKey reasonKey4">
+        <div class="reasonKey reasonKey4 scrollAnimationScale">
             <h1>No<br>Boundaries</h1>
         </div>
         <div class="reasonDescription reasonDescription4">
@@ -85,7 +85,7 @@
         <div class="reasonDescription reasonDescription5">
             <h2>We </h2><h1>do not use</h1><h2> AI technology to </h2><h1>addict</h1><h2> you in the platform by showing specific </h2><h1>friend suggestions</h1><h2>. Live a </h2><h1>life</h1><h2> of your </h2><h1>choice.</h1>
         </div>
-        <div class="reasonKey reasonKey5">
+        <div class="reasonKey reasonKey5 scrollAnimationScale">
             <h1>No AI</h1>
         </div>
     </div>
