--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@
             <h1>Security</h1>
         </div>
         <div class="reasonDescription reasonDescription2">
-            <h2>We do not store your </h2><h1>exact location</h1><h2> in our </h2><h1>database</h1><h2> and your </h2><h1>security</h1><h2> is </h2><h1>prioritized</h1>
+            <h2>We do not store your </h2><h1>exact location</h1><h2> in our </h2><h1>database</h1><h2> and your </h2><h1>security</h1><h2> is </h2><h1>prioritized.</h1>
         </div>
     </div>
     <div class="featureSeparator"></div>
     <div class="featureDescription">
         <div class="reasonDescription reasonDescription3">
-            <h2>You do not need to </h2><h1>share</h1><h2> your </h2><h1>contact number</h1><h2> to interact with others and </h2><h1>your digital life</h1><h2> is in </h2><h1>your control</h1>
+            <h2>You do not need to </h2><h1>share</h1><h2> your </h2><h1>contact number</h1><h2> to interact with others and </h2><h1>your digital life</h1><h2> is in </h2><h1>your control.</h1>
         </div>
         <div class="reasonKey reasonKey3 scrollAnimationScale">
             <h1>Control</h1>
