--- a/index.html
+++ b/index.html
@@ -5,20 +5,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <script defer src="script.js"></script>
     <title>MixCuss: Home</title>
 </head>
 
 <body>
     <nav>
         <img src="images/logoWithName.png" class="logo">
+        <div>
+            <a href="#" class="downloadApp btn">Download App</a>
+        </div>
         <ul>
             <li><a href="privacyPolicy.html">Privacy Policy</a></li>
             <li><a href="termsOfServices.html">Terms of Services</a></li>
             <li><a href="legal.html">Legal</a></li>
         </ul>
-        <div>
-            <a href="#" class="btn">Download App</a>
-        </div>
     </nav>
     <div class="headerContent">
         <img src="images/login_background2x.png" class="header-img initialAnimation1">
@@ -28,17 +29,19 @@
         </div>
     </div>
     <div class="featureContent">
-        <h2 class="scrollAnimationMoveLeft">Five reasons<br>why</h2>
-        <h1 class="scrollAnimationMoveLeft">MixCuss</h1>
+        <div class="hidden1">
+            <h2>Five reasons<br>why</h2>
+            <h1>MixCuss</h1>
+        </div>
     </div>
     <div class="featureDescription reasonZero">
         <div class="reasonZero1">
-            <div class="reasonZero1ContentWrapper scrollAnimationMoveRight2">
+            <div class="reasonZero1ContentWrapper hidden2">
                 <h2>Nothing</h2>
             </div>
         </div>
         <div class="reasonZero2">
-            <div class="reasonZero2ContentWrapper scrollAnimationMoveLeft2">
+            <div class="reasonZero2ContentWrapper hidden3">
                 <h2>just for<br>something </h2>
                 <h1>New</h1>
             </div>
@@ -47,45 +50,79 @@
     <div class="featureSeparator"></div>
     <div class="featureDescription">
         <div class="reasonDescription reasonDescription1">
-            <h2>We </h2><h1>do not store</h1><h2> mobile numbers in the </h2><h1>user details</h1><h2>. So, no one can access your </h2><h1>contact number.</h1>
+            <h2>We </h2>
+            <h1>do not store</h1>
+            <h2> mobile numbers in the </h2>
+            <h1>user details.</h1>
+            <h2> So, no one can access your </h2>
+            <h1>contact number.</h1>
         </div>
-        <div class="reasonKey reasonKey1 scrollAnimationScale">
+        <div class="reasonKey reasonKey1 hidden4">
             <h1>Privacy</h1>
         </div>
     </div>
     <div class="featureSeparator"></div>
     <div class="featureDescription">
-        <div class="reasonKey reasonKey2 scrollAnimationScale">
+        <div class="reasonKey reasonKey2 hidden4">
             <h1>Security</h1>
         </div>
         <div class="reasonDescription reasonDescription2">
-            <h2>We do not store your </h2><h1>exact location</h1><h2> in our </h2><h1>database</h1><h2> and your </h2><h1>security</h1><h2> is </h2><h1>prioritized.</h1>
+            <h2>We do not store your </h2>
+            <h1>exact location</h1>
+            <h2> in our </h2>
+            <h1>database</h1>
+            <h2> and your </h2>
+            <h1>security</h1>
+            <h2> is </h2>
+            <h1>prioritized.</h1>
         </div>
     </div>
     <div class="featureSeparator"></div>
     <div class="featureDescription">
         <div class="reasonDescription reasonDescription3">
-            <h2>You do not need to </h2><h1>share</h1><h2> your </h2><h1>contact number</h1><h2> to interact with others and </h2><h1>your digital life</h1><h2> is in </h2><h1>your control.</h1>
+            <h2>You do not need to </h2>
+            <h1>share</h1>
+            <h2> your </h2>
+            <h1>contact number</h1>
+            <h2> to interact with others and </h2>
+            <h1>your digital life</h1>
+            <h2> is in </h2>
+            <h1>your control.</h1>
         </div>
-        <div class="reasonKey reasonKey3 scrollAnimationScale">
+        <div class="reasonKey reasonKey3 hidden4">
             <h1>Control</h1>
         </div>
     </div>
     <div class="featureSeparator"></div>
     <div class="featureDescription">
-        <div class="reasonKey reasonKey4 scrollAnimationScale">
+        <div class="reasonKey reasonKey4 hidden4">
             <h1>No<br>Boundaries</h1>
         </div>
         <div class="reasonDescription reasonDescription4">
-            <h1>Everyone</h1><h2> is now your </h2><h1>neighbors. Search places</h1><h2> you wish and meet </h2><h1>people</h1><h2> whom you </h2><h1>like.</h1>
+            <h1>Everyone</h1>
+            <h2> is now your </h2>
+            <h1>neighbors. Search places</h1>
+            <h2> you wish and meet </h2>
+            <h1>people</h1>
+            <h2> whom you </h2>
+            <h1>like.</h1>
         </div>
     </div>
     <div class="featureSeparator"></div>
     <div class="featureDescription">
         <div class="reasonDescription reasonDescription5">
-            <h2>We </h2><h1>do not use</h1><h2> AI technology to </h2><h1>addict</h1><h2> you in the platform by showing specific </h2><h1>friend suggestions</h1><h2>. Live a </h2><h1>life</h1><h2> of your </h2><h1>choice.</h1>
+            <h2>We </h2>
+            <h1>do not use</h1>
+            <h2> AI technology to </h2>
+            <h1>addict</h1>
+            <h2> you in the platform by showing specific </h2>
+            <h1>friend suggestions.</h1>
+            <h2> Live a </h2>
+            <h1>life</h1>
+            <h2> of your </h2>
+            <h1>choice.</h1>
         </div>
-        <div class="reasonKey reasonKey5 scrollAnimationScale">
+        <div class="reasonKey reasonKey5 hidden4">
             <h1>No AI</h1>
         </div>
     </div>
@@ -94,4 +131,5 @@
         <h3>Copyright reserved<br>Contact us</h3>
     </div>
 </body>
+
 </html>
