--- a/termsOfServices.html
+++ b/termsOfServices.html
@@ -9,14 +9,14 @@
 <body>
     <nav>
         <a href="index.html"><img src="images/logoWithName.png" class="logo"></a>
+        <div>
+            <a href="#" class="downloadApp btn">Download App</a>
+        </div>
         <ul>
             <li><a href="privacyPolicy.html">Privacy Policy</a></li>
             <li><a href="#">Terms of Services</a></li>
             <li><a href="legal.html">Legal</a></li>
         </ul>
-        <div>
-            <a href="#" class="btn">Download App</a>
-        </div>
     </nav>
     
 
