Updated all html files

--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" type="image/x-icon" href="images/appIcon_transparent.png" />
     <script defer src="script.js"></script>
     <title>MixCuss: Home</title>
 </head>
+
+<!-- Side-bar ref. https://www.w3schools.com/howto/howto_js_sidenav.asp -->
 
 <body>
     <nav>
@@ -17,7 +20,7 @@
         </div>
         <ul>
             <li><a href="privacyPolicy.html">Privacy Policy</a></li>
-            <li><a href="termsOfServices.html">Terms of Services</a></li>
+            <li><a href="termsOfUse.html">Terms of Use</a></li>
             <li><a href="legal.html">Legal</a></li>
         </ul>
     </nav>
