--- a/legal.html
+++ b/legal.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>MixCuss: Legal</title>
 </head>
+
 <body>
     <nav>
         <a href="index.html"><img src="images/logoWithName.png" class="logo"></a>
@@ -14,15 +16,33 @@
         </div>
         <ul>
             <li><a href="privacyPolicy.html">Privacy Policy</a></li>
-            <li><a href="termsOfServices.html">Terms of Services</a></li>
+            <li><a href="termsOfUse.html">Terms of Use</a></li>
             <li><a href="#">Legal</a></li>
         </ul>
     </nav>
-    
+
+    <div class="privacyPolicyWrapper">
+        <div class="textContent">
+            Welcome to MixCuss! Please review our legal information to understand the terms and conditions governing
+            your use of our website and services.
+            <br>
+            <br>
+            By accessing and using MixCuss, you agree to be bound by our <a href="termsOfUse.html">Terms of Use.</a>
+            <br>
+            <br>
+            We are committed to providing a safe and positive experience for all users. Please read our <a
+                href="acceptableUsagePolicy.html">Acceptable Usage Policy</a> to understand the guidelines for using our platform responsibly.
+            <br>
+            <br>
+            Your privacy is important to us. Our <a href="privacyPolicy.html">Privacy Policy</a> explains how we collect, use, and protect
+            your personal information.
+        </div>
+    </div>
 
     <div class="featureSeparator"></div>
     <div class="footer">
         <h3>Copyright reserved<br>Contact us</h3>
     </div>
 </body>
+
 </html>
