--- a/acceptableUsagePolicy.html
+++ b/acceptableUsagePolicy.html
@@ -29,82 +29,101 @@
         <br>
         <br>
 
-        <div class="textContent">
-            Welcome to MixCuss! This Acceptable Usage Policy ("Policy") outlines the standards and behaviours expected
-            of all users who engage with our platform. MixCuss is committed to providing a safe, respectful, and
-            productive environment for everyone. By accessing or using MixCuss, you agree to adhere to the guidelines
-            and rules set forth in this Policy, ensuring that all interactions are conducted in a manner that promotes a
-            positive experience for the entire community. Thank you for helping us maintain the integrity and quality of
-            our platform.
-            <br>
-            <br>
-            As a user of the Services, you agree not to:
-            <br>
-            <br>
-            1. Systematically retrieve data or other content from the Services to create or compile, directly or
-            indirectly, a collection, compilation, database, or directory without written permission from us.
-            <br>
-            2. Make any unauthorised use of the Services, including collecting usernames and/or email addresses of users
-            by electronic or other means for the purpose of sending unsolicited email, or creating user accounts by
-            automated means or under false pretences.
-            <br>
-            3. Use a buying agent or purchasing agent to make purchases on the Services.
-            <br>
-            4. Circumvent, disable, or otherwise interfere with security-related features of the Services, including
-            features that prevent or restrict the use or copying of any Content or enforce limitations on the use of the
-            Services and/or the Content contained therein.
-            <br>
-            5. Engage in unauthorised framing of or linking to the Services.
-            <br>
-            6. Trick, defraud, or mislead us and other users, especially in any attempt to learn sensitive account
-            information such as user passwords.
-            <br>
-            7. Make improper use of our support services or submit false reports of abuse or misconduct.
-            <br>
-            8. Engage in any automated use of the system, such as using scripts to send comments or messages, or using
-            any data mining, robots, or similar data gathering and extraction tools.
-            <br>
-            9. Interfere with, disrupt, or create an undue burden on the Services or the networks or services connected
-            to the Services.
-            <br>
-            10. Attempt to impersonate another user or person or use the username of another user.
-            <br>
-            11. Use any information obtained from the Services in order to harass, abuse, or harm another person.
-            <br>
-            12. Use the Services as part of any effort to compete with us or otherwise use the Services and/or the
-            Content for any revenue-generating endeavour or commercial enterprise.
-            <br>
-            13. Except as permitted by applicable law, decipher, decompile, disassemble, or reverse engineer any of the
-            software comprising or in any way making up a part of the Services.
-            <br>
-            14. Attempt to bypass any measures of the Services designed to prevent or restrict access to the Services,
-            or any portion of the Services.
-            <br>
-            15. Harass, annoy, intimidate, or threaten any of our employees or agents engaged in providing any portion
-            of the Services to you.
-            <br>
-            16. Delete the copyright or other proprietary rights notice from any Content.
-            <br>
-            17. Copy or adapt the Services’ software, including but not limited to code and general design decisions.
-            <br>
-            18. Upload or transmit (or attempt to upload or to transmit) viruses, Trojan horses, or other material,
-            including excessive use of capital letters and spamming (continuous posting of repetitive text), that
-            interferes with any party’s uninterrupted use and enjoyment of the Services or modifies, impairs, disrupts,
-            alters, or interferes with the use, features, functions, operation, or maintenance of the Services.
-            <br>
-            19. Upload or transmit (or attempt to upload or to transmit) any material that acts as a passive or active
-            information collection or transmission mechanism, including without limitation, clear graphics interchange
-            formats (“gifs”), 1×1 pixels, web bugs, cookies, or other similar devices (sometimes referred to as
-            “spyware” or “passive collection mechanisms” or “pcms”).
-            <br>
-            20. Except as may be the result of standard search engine or Internet browser usage, use, launch, develop,
-            or distribute any automated system, including without limitation, any spider, robot, cheat utility, scraper,
-            or offline reader that accesses the Services, or using or launching any unauthorised script or other
-            software.
-            <br>
-            21. Disparage, tarnish, or otherwise harm, in our opinion, us and/or the Services.
-            <br>
-            22. Use the Services in a manner inconsistent with any applicable laws or regulations.
+        <div class="section">
+            <div class="textContent">
+                Welcome to MixCuss! This Acceptable Usage Policy ("Policy") outlines the standards and behaviours
+                expected
+                of all users who engage with our platform. MixCuss is committed to providing a safe, respectful, and
+                productive environment for everyone. By accessing or using MixCuss, you agree to adhere to the
+                guidelines
+                and rules set forth in this Policy, ensuring that all interactions are conducted in a manner that
+                promotes a
+                positive experience for the entire community. Thank you for helping us maintain the integrity and
+                quality of
+                our platform.
+                <br>
+                <br>
+                As a user of the Services, you agree not to:
+                <br>
+                <br>
+                1. Systematically retrieve data or other content from the Services to create or compile, directly or
+                indirectly, a collection, compilation, database, or directory without written permission from us.
+                <br>
+                2. Make any unauthorised use of the Services, including collecting usernames and/or email addresses of
+                users
+                by electronic or other means for the purpose of sending unsolicited email, or creating user accounts by
+                automated means or under false pretences.
+                <br>
+                3. Use a buying agent or purchasing agent to make purchases on the Services.
+                <br>
+                4. Circumvent, disable, or otherwise interfere with security-related features of the Services, including
+                features that prevent or restrict the use or copying of any Content or enforce limitations on the use of
+                the
+                Services and/or the Content contained therein.
+                <br>
+                5. Engage in unauthorised framing of or linking to the Services.
+                <br>
+                6. Trick, defraud, or mislead us and other users, especially in any attempt to learn sensitive account
+                information such as user passwords.
+                <br>
+                7. Make improper use of our support services or submit false reports of abuse or misconduct.
+                <br>
+                8. Engage in any automated use of the system, such as using scripts to send comments or messages, or
+                using
+                any data mining, robots, or similar data gathering and extraction tools.
+                <br>
+                9. Interfere with, disrupt, or create an undue burden on the Services or the networks or services
+                connected
+                to the Services.
+                <br>
+                10. Attempt to impersonate another user or person or use the username of another user.
+                <br>
+                11. Use any information obtained from the Services in order to harass, abuse, or harm another person.
+                <br>
+                12. Use the Services as part of any effort to compete with us or otherwise use the Services and/or the
+                Content for any revenue-generating endeavour or commercial enterprise.
+                <br>
+                13. Except as permitted by applicable law, decipher, decompile, disassemble, or reverse engineer any of
+                the
+                software comprising or in any way making up a part of the Services.
+                <br>
+                14. Attempt to bypass any measures of the Services designed to prevent or restrict access to the
+                Services,
+                or any portion of the Services.
+                <br>
+                15. Harass, annoy, intimidate, or threaten any of our employees or agents engaged in providing any
+                portion
+                of the Services to you.
+                <br>
+                16. Delete the copyright or other proprietary rights notice from any Content.
+                <br>
+                17. Copy or adapt the Services’ software, including but not limited to code and general design
+                decisions.
+                <br>
+                18. Upload or transmit (or attempt to upload or to transmit) viruses, Trojan horses, or other material,
+                including excessive use of capital letters and spamming (continuous posting of repetitive text), that
+                interferes with any party’s uninterrupted use and enjoyment of the Services or modifies, impairs,
+                disrupts,
+                alters, or interferes with the use, features, functions, operation, or maintenance of the Services.
+                <br>
+                19. Upload or transmit (or attempt to upload or to transmit) any material that acts as a passive or
+                active
+                information collection or transmission mechanism, including without limitation, clear graphics
+                interchange
+                formats (“gifs”), 1×1 pixels, web bugs, cookies, or other similar devices (sometimes referred to as
+                “spyware” or “passive collection mechanisms” or “pcms”).
+                <br>
+                20. Except as may be the result of standard search engine or Internet browser usage, use, launch,
+                develop,
+                or distribute any automated system, including without limitation, any spider, robot, cheat utility,
+                scraper,
+                or offline reader that accesses the Services, or using or launching any unauthorised script or other
+                software.
+                <br>
+                21. Disparage, tarnish, or otherwise harm, in our opinion, us and/or the Services.
+                <br>
+                22. Use the Services in a manner inconsistent with any applicable laws or regulations.
+            </div>
         </div>
     </div>
 
