--- a/acceptableUsagePolicy.html
+++ b/acceptableUsagePolicy.html
@@ -25,6 +25,8 @@
         <div class="privacyPolicyHeader">
             <h1>Acceptable Usage Policy for MixCuss</h1>
             <br>
+            <h3>Effective: August 15, 2024. Last Revised: August 15, 2024.</h3>
+            <br>
             <br>
             <br>
         </div>
