--- a/termsOfUse.html
+++ b/termsOfUse.html
@@ -24,14 +24,14 @@
     <div class="privacyPolicyWrapper">
         <div class="privacyPolicyHeader">
             <h1>Terms of Usage Agreement for MixCuss</h1>
+            <br>
+            <h3>Effective: August 15, 2024. Last Revised: August 15, 2024.</h3>
+            <br>
+            <br>
+            <br>
         </div>
-        <br>
-        <br>
-        <br>
 
         <div class="section">
-
-
             <div class="textContent">
                 These Terms of Usage constitute a legally binding agreement made between you, whether personally or on
                 behalf of an entity (“you”), and MixCuss, an app created by Sudarshan Saha, and concerning your access
@@ -106,115 +106,91 @@
             </div>
             <div class="textContent">
                 Our intellectual property: Sudarshan Saha, the creator of MixCuss, and MixCuss as an independent entity,
-                are
-                the owner or the licensee of all intellectual property rights in our Services, including all source
-                code,
-                databases, functionality, software, website designs, audio, video, text, photographs, and graphics in
-                the
-                Services (collectively, the “Content”), as well as the trademarks, service marks, and logos contained
-                therein (the “Marks”).
+                are the owner or the licensee of all intellectual property rights in our Services, including all source
+                code, databases, functionality, software, website designs, audio, video, text, photographs, and graphics
+                in the Services (collectively, the “Content”), as well as the trademarks, service marks, and logos
+                contained therein (the “Marks”).
                 <br>
                 <br>
                 Our Content and Marks are protected by copyright and trademark laws (and various other intellectual
-                property
-                rights and unfair competition laws) and treaties in India and around the world.
+                property rights and unfair competition laws) and treaties in India and around the world.
                 <br>
                 <br>
                 The Content and Marks are provided in or through the Services “AS IS” for your personal, non-commercial
-                use
-                only.
+                use only.
                 <br>
                 <br>
                 Your use of our Services: Subject to your compliance with these Terms of Usage, including the
-                "Acceptable
-                Usage Policy" section below, we grant you a non-exclusive, non-transferable, revocable licence to: (a)
-                access the Services; and (b) download or print a copy of any portion of the Content to which you have
-                properly gained access, solely for your personal, non-commercial use.
+                "Acceptable Usage Policy" section below, we grant you a non-exclusive, non-transferable, revocable
+                licence to: (a) access the Services; and (b) download or print a copy of any portion of the Content to
+                which you have properly gained access, solely for your personal, non-commercial use.
                 <br>
                 <br>
                 Except as set out in this section or elsewhere in our Terms of Usage, no part of the Services and no
-                Content
-                or Marks may be copied, reproduced, aggregated, republished, uploaded, posted, publicly displayed,
-                encoded,
-                translated, transmitted, distributed, sold, licensed, or otherwise exploited for any purpose whatsoever,
-                without our express prior written permission.
+                Content or Marks may be copied, reproduced, aggregated, republished, uploaded, posted, publicly
+                displayed, encoded, translated, transmitted, distributed, sold, licensed, or otherwise exploited for any
+                purpose whatsoever, without our express prior written permission.
                 <br>
                 <br>
                 If you wish to make any use of the Services, Content, or Marks other than as set out in this section or
-                elsewhere in our Terms of Usage, please address your request to: [Email Address]. If we ever grant you
-                the
-                permission to post, reproduce, or publicly display any part of our Services or Content, you must
-                identify us
-                as the owners or licensors of the Services, Content, or Marks and ensure that any copyright or
-                proprietary
-                notice appears or is visible on posting, reproducing, or displaying our Content.
+                elsewhere in our Terms of Usage, please address your request to: mixcuss@gmail.com. If we ever grant you
+                the permission to post, reproduce, or publicly display any part of our Services or Content, you must
+                identify us as the owners or licensors of the Services, Content, or Marks and ensure that any copyright
+                or proprietary notice appears or is visible on posting, reproducing, or displaying our Content.
                 <br>
                 <br>
                 We reserve all rights not expressly granted to you in and to the Services, Content, and Marks.
                 <br>
                 <br>
                 Any breach of these Intellectual Property Rights will constitute a material breach of our Terms of Usage
-                and
-                your right to use our Services will terminate immediately.
+                and your right to use our Services will terminate immediately.
                 <br>
                 <br>
                 Your submissions and contributions: Please review this section and our “Acceptable Usage Policy”
-                carefully
-                prior to using our Services to understand the (a) rights you give us and (b) obligations you have when
-                you
-                post or upload any content through the Services.
+                carefully prior to using our Services to understand the (a) rights you give us and (b) obligations you
+                have when you post or upload any content through the Services.
                 <br>
                 <br>
                 Submissions: By directly sending us any question, comment, suggestion, idea, feedback, or other
-                information
-                about the Services ("Submissions"), you agree to assign to us all intellectual property rights in such
-                Submission. You agree that we shall own this Submission and be entitled to its unrestricted use and
-                dissemination for any lawful purpose, commercial or otherwise, without acknowledgment or compensation to
-                you.
+                information about the Services ("Submissions"), you agree to assign to us all intellectual property
+                rights in such Submission. You agree that we shall own this Submission and be entitled to its
+                unrestricted use and dissemination for any lawful purpose, commercial or otherwise, without
+                acknowledgment or compensation to you.
                 <br>
                 <br>
                 Contributions: The Services may invite you to chat, contribute to online forums and other functionality
                 during which you may create, submit, post, display, transmit, publish, distribute, or broadcast content
-                and
-                materials to us or through the Services, including but not limited to text, writings, video, audio,
+                and materials to us or through the Services, including but not limited to text, writings, video, audio,
                 photographs, music, graphics, comments, reviews, rating suggestions, personal information, or other
-                material
-                (“Contributions”). Any Submission that is publicly posted shall also be treated as a Contribution.
+                material (“Contributions”). Any Submission that is publicly posted shall also be treated as a
+                Contribution.
                 <br>
                 <br>
                 You understand that Contributions may be viewable by other users of the Services.
                 <br>
                 <br>
                 When you post Contributions, you grant us a licence (including use of your name, trademarks, and logos):
-                By
-                posting any Contributions, you grant us an unrestricted, unlimited, irrevocable, perpetual,
-                non-exclusive,
-                transferable, royalty-free, fully-paid, worldwide right, and licence to: use, copy, reproduce,
-                distribute,
-                sell, resell, publish, broadcast, retitle, store, publicly perform, publicly display, reformat,
-                translate,
-                excerpt (in whole or in part), and exploit your Contributions (including, without limitation, your
-                image,
-                name, and voice) for any purpose, commercial, advertising, or otherwise, to prepare derivative works of,
-                or
-                incorporate into other works, your Contributions, and to sublicense the licences granted in this
-                section.
-                Our use and distribution may occur in any media formats and through any media channels.
+                By posting any Contributions, you grant us an unrestricted, unlimited, irrevocable, perpetual,
+                non-exclusive, transferable, royalty-free, fully-paid, worldwide right, and licence to: use, copy,
+                reproduce, distribute, sell, resell, publish, broadcast, retitle, store, publicly perform, publicly
+                display, reformat, translate, excerpt (in whole or in part), and exploit your Contributions (including,
+                without limitation, your image, name, and voice) for any purpose, commercial, advertising, or otherwise,
+                to prepare derivative works of, or incorporate into other works, your Contributions, and to sublicense
+                the licences granted in this section. Our use and distribution may occur in any media formats and
+                through any media channels.
                 <br>
                 <br>
                 This licence includes our use of your name, company name, and franchise name, as applicable, and any of
-                the
-                trademarks, service marks, trade names, logos, and personal and commercial images you provide.
+                the trademarks, service marks, trade names, logos, and personal and commercial images you provide.
                 <br>
                 <br>
                 You are responsible for what you post or upload: By sending us Submissions and/or posting Contributions
                 through any part of the Services or making Contributions accessible through the Services by linking your
                 account through the Services to any of your social networking accounts, you: (a)confirm that you have
-                read
-                and agree with our “Acceptable Usage Policy” and will not post, send, publish, upload, or transmit
-                through
-                the Services any Submission nor post any Contribution that is illegal, harassing, hateful, harmful,
-                defamatory, obscene, bullying, abusive, discriminatory, threatening to any person or group, sexually
+                read and agree with our “Acceptable Usage Policy” and will not post, send, publish, upload, or transmit
+                through the Services any Submission nor post any Contribution that is illegal, harassing, hateful,
+                harmful, defamatory, obscene, bullying, abusive, discriminatory, threatening to any person or group,
+                sexually
                 explicit, false, inaccurate, deceitful, or misleading; (b) to the extent permissible by applicable law,
                 waive any and all moral rights to any such Submission and/or Contribution; (c) warrant that any such
                 Submissions and/or Contributions are original to you or that you have the necessary rights and licences
@@ -948,9 +924,6 @@
                 the
                 lack of signing by the parties hereto to execute these Terms of Usage.
             </div>
-            <br>
-            <br>
-            <br>
         </div>
     </div>
 
