--- a/index.html
+++ b/index.html
@@ -32,10 +32,15 @@
 
     <div class="mobile">
         <nav>
-            <div onclick="openSidebar()" id="menuButton" class="menuButton">&#9776;</div>
-            <div onclick="closeSidebar()" id="closeButton" class="menuButton">&#x2715;</div>
             <img src="images/logoWithName.png" alt="MixCuss" class="logo">
         </nav>
+    </div>
+
+    <div class="mobile">
+        <div class="menuButtonContainer">
+            <div onclick="openSidebar()" id="menuButton" class="menuButton"></div>
+            <div onclick="closeSidebar()" id="closeButton" class="menuButton"></div>
+        </div>
     </div>
 
     <div class="mobile">
@@ -159,12 +164,12 @@
     <div class="mobile">
         <div class="featureDescription">
             <div class="reasonDescription reasonDescription1">
-                <h2>We </h2>
-                <h1>do not store</h1>
-                <h2> mobile numbers in the </h2>
-                <h1>user details.</h1>
-                <h2> So, no one can access your </h2>
-                <h1>contact number.</h1>
+                <h2>We</h2>
+                <h1> do not store </h1>
+                <h2>mobile numbers in the</h2>
+                <h1> user details.</h1>
+                <h2>So, no one can access your</h2>
+                <h1> contact number.</h1>
             </div>
             <div class="reasonKey reasonKey1">
                 <h1>Privacy</h1>
@@ -204,14 +209,12 @@
                 <h1>Security</h1>
             </div>
             <div class="reasonDescription reasonDescription2">
-                <h2>We do not store your </h2>
-                <h1>exact location</h1>
-                <h2> in our </h2>
-                <h1>database</h1>
-                <h2> and your </h2>
-                <h1>security</h1>
-                <h2> is </h2>
-                <h1>prioritized.</h1>
+                <h2>We</h2><h1> do not use </h1><h2>your</h2>
+                <h1> exact location </h1>
+                <h2>and your</h2>
+                <h1> security </h1>
+                <h2>is</h2>
+                <h1> prioritized.</h1>
             </div>
         </div>
     </div>
@@ -245,14 +248,14 @@
     <div class="mobile">
         <div class="featureDescription">
             <div class="reasonDescription reasonDescription3">
-                <h2>You do not need to </h2>
-                <h1>share</h1>
-                <h2> your </h2>
-                <h1>contact number</h1>
-                <h2> to interact with others and </h2>
-                <h1>your digital life</h1>
-                <h2> is in </h2>
-                <h1>your control.</h1>
+                <h2>No need to</h2>
+                <h1> share </h1>
+                <h2>your</h2>
+                <h1> contact number </h1>
+                <h2>to interact with others,</h2>
+                <h1> your digital life </h1>
+                <h2>is in</h2>
+                <h1> your control.</h1>
             </div>
             <div class="reasonKey reasonKey3">
                 <h1>Control</h1>
@@ -291,13 +294,13 @@
                 <h1>No<br>Boundaries</h1>
             </div>
             <div class="reasonDescription reasonDescription4">
-                <h1>Everyone</h1>
-                <h2> is now your </h2>
-                <h1>neighbors. Search places</h1>
-                <h2> you wish and meet </h2>
-                <h1>people</h1>
+                <h1>Everyone </h1>
+                <h2>is now your</h2>
+                <h1> neighbors. Search places </h1>
+                <h2>you wish and meet</h2>
+                <h1> people </h1>
                 <h2> whom you </h2>
-                <h1>like.</h1>
+                <h1> like.</h1>
             </div>
         </div>
     </div>
@@ -333,16 +336,16 @@
     <div class="mobile">
         <div class="featureDescription">
             <div class="reasonDescription reasonDescription5">
-                <h2>We </h2>
-                <h1>do not use</h1>
-                <h2> AI to </h2>
-                <h1>addict</h1>
-                <h2> you in the platform by showing specific </h2>
-                <h1>friend suggestions.</h1>
-                <h2> Live a </h2>
-                <h1>life</h1>
-                <h2> of your </h2>
-                <h1>choice.</h1>
+                <h2>We</h2>
+                <h1> do not use AI </h1>
+                <h2>to</h2>
+                <h1> addict </h1>
+                <h2>you in the platform by showing specific</h2>
+                <h1> friend suggestions. </h1>
+                <h2>Live a </h2>
+                <h1> life </h1>
+                <h2>of your</h2>
+                <h1> choice.</h1>
             </div>
             <div class="reasonKey reasonKey5">
                 <h1>No AI</h1>
