Added new pages

--- a/about.html
+++ b/about.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,9 +8,8 @@
     <link rel="shortcut icon" type="image/x-icon" href="images/appIcon_transparent.png" />
     <script defer src="script.js"></script>
     <script defer src="scriptMobile.js"></script>
-    <title>MixCuss: Legal</title>
+    <title>MixCuss: About</title>
 </head>
-
 <body>
     <div class="computer">
         <nav>
@@ -49,10 +47,10 @@
 
     <div class="mobile">
         <div id="mySidenav" class="sidenav">
-            <a onclick="closeSidebar()" href="about.html">About</a>
+            <a onclick="closeSidebar()" href="#">About</a>
             <a onclick="closeSidebar()" href="privacyPolicy.html">Privacy Policy</a>
             <a onclick="closeSidebar()" href="termsOfUse.html">Terms of Use</a>
-            <a onclick="closeSidebar()" href="#">Legal</a>
+            <a onclick="closeSidebar()" href="legal.html">Legal</a>
             <a onclick="closeSidebar()" href="contact.html">Contact</a>
           </div>
     </div>
@@ -61,31 +59,15 @@
 
     <div class="privacyPolicyWrapper">
         <div class="privacyPolicyHeader">
-            <h1>Legal Information</h1>
-            <br><br><br>
-        </div>
-
-        <div class="section">
-            <div class="textContent">
-                Welcome to MixCuss! Please review our legal information to understand the terms and conditions governing
-                your use of our website and services.
-                <br><br>
-                By accessing and using MixCuss, you agree to be bound by our <a href="termsOfUse.html">Terms of Use</a>.
-                <br><br>
-                We are committed to providing a safe and positive experience for all users. Please read our <a
-                    href="acceptableUsagePolicy.html">Acceptable Usage Policy</a> to understand the guidelines for using
-                our platform responsibly.
-                <br><br>
-                Your privacy is important to us. Our <a href="privacyPolicy.html">Privacy Policy</a> explains how we
-                collect, use, and protect your personal information.
-            </div>
+            <h1>About MixCuss</h1>
+            <br>
+            <br>
+            <br>
         </div>
     </div>
 
-    <div class="featureSeparator"></div>
     <div class="footer">
         <h3>Copyright reserved<br>Contact us</h3>
     </div>
 </body>
-
 </html>
