--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
     <link rel="shortcut icon" type="image/x-icon" href="images/appIcon_transparent.png" />
     <script defer src="script.js"></script>
     <script defer src="scriptMobile.js"></script>
-    <title>MixCuss: Legal</title>
+    <title>MixCuss: Contact</title>
 </head>
 
 <body>
@@ -52,39 +52,28 @@
             <a onclick="closeSidebar()" href="about.html">About</a>
             <a onclick="closeSidebar()" href="privacyPolicy.html">Privacy Policy</a>
             <a onclick="closeSidebar()" href="termsOfUse.html">Terms of Use</a>
-            <a onclick="closeSidebar()" href="#">Legal</a>
-            <a onclick="closeSidebar()" href="contact.html">Contact</a>
-          </div>
+            <a onclick="closeSidebar()" href="legal.html">Legal</a>
+            <a onclick="closeSidebar()" href="#">Contact</a>
+        </div>
     </div>
 
     <!-- Main content starts from here -->
 
     <div class="privacyPolicyWrapper">
         <div class="privacyPolicyHeader">
-            <h1>Legal Information</h1>
-            <br><br><br>
+            <h1>Contact Us</h1>
+            <br>
+            <br>
+            <br>
         </div>
 
-        <div class="section">
-            <div class="textContent">
-                Welcome to MixCuss! Please review our legal information to understand the terms and conditions governing
-                your use of our website and services.
-                <br><br>
-                By accessing and using MixCuss, you agree to be bound by our <a href="termsOfUse.html">Terms of Use</a>.
-                <br><br>
-                We are committed to providing a safe and positive experience for all users. Please read our <a
-                    href="acceptableUsagePolicy.html">Acceptable Usage Policy</a> to understand the guidelines for using
-                our platform responsibly.
-                <br><br>
-                Your privacy is important to us. Our <a href="privacyPolicy.html">Privacy Policy</a> explains how we
-                collect, use, and protect your personal information.
-            </div>
+        <div class="information">
+            At MixCuss we are always happy to listen from you, please feel free to write to us at <a href= "mailto: mixcuss@gmail.com">mixcuss@gmail.com</a>.
+            <br>
+            <br>
+            If you have any complaint, email us at <a href= "mailto: complain.mixcuss@gmail.com">complain.mixcuss@gmail.com</a> and for privacy policy related issue write
+            to us at <a href= "mailto: privacy.mixcuss@gmail.com">privacy.mixcuss@gmail.com</a>.
         </div>
-    </div>
-
-    <div class="featureSeparator"></div>
-    <div class="footer">
-        <h3>Copyright reserved<br>Contact us</h3>
     </div>
 </body>
 
