--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="shortcut icon" type="image/x-icon" href="images/appIcon_transparent.png" />
     <script defer src="script.js"></script>
     <script defer src="scriptMobile.js"></script>
-    <title>MixCuss: Home</title>
+    <title>MixCuss</title>
 </head>
 
 <!-- https://www.w3schools.com/html/html_responsive.asp -->
@@ -49,13 +49,15 @@
 
     <div class="mobile">
         <div id="mySidenav" class="sidenav">
-            <a onclick="closeSidebar()" href="#">About</a>
+            <a onclick="closeSidebar()" href="about.html">About</a>
             <a onclick="closeSidebar()" href="privacyPolicy.html">Privacy Policy</a>
             <a onclick="closeSidebar()" href="termsOfUse.html">Terms of Use</a>
             <a onclick="closeSidebar()" href="legal.html">Legal</a>
-            <a onclick="closeSidebar()" href="#">Contact</a>
+            <a onclick="closeSidebar()" href="contact.html">Contact</a>
           </div>
     </div>
+
+    <!-- Main content starts from here -->
 
     <div class="computer">
         <div class="headerContent">
@@ -148,12 +150,12 @@
     <div class="computer">
         <div class="featureDescription">
             <div class="reasonDescription reasonDescription1">
-                <h2>We </h2>
-                <h1>do not store</h1>
-                <h2> mobile numbers in the </h2>
-                <h1>user details.</h1>
-                <h2> So, no one can access your </h2>
-                <h1>contact number.</h1>
+                <h2>We</h2>
+                <h1> do not store </h1>
+                <h2>mobile numbers in the</h2>
+                <h1> user details.</h1>
+                <h2>So, no one can access your</h2>
+                <h1> contact number.</h1>
             </div>
             <div class="reasonKey reasonKey1 hidden4">
                 <h1>Privacy</h1>
@@ -191,14 +193,12 @@
                 <h1>Security</h1>
             </div>
             <div class="reasonDescription reasonDescription2">
-                <h2>We do not store your </h2>
-                <h1>exact location</h1>
-                <h2> in our </h2>
-                <h1>database</h1>
-                <h2> and your </h2>
-                <h1>security</h1>
-                <h2> is </h2>
-                <h1>prioritized.</h1>
+                <h2>We</h2><h1> do not use </h1><h2>your</h2>
+                <h1> exact location </h1>
+                <h2>and your</h2>
+                <h1> security </h1>
+                <h2>is</h2>
+                <h1> prioritized.</h1>
             </div>
         </div>
     </div>
@@ -230,14 +230,14 @@
     <div class="computer">
         <div class="featureDescription">
             <div class="reasonDescription reasonDescription3">
-                <h2>You do not need to </h2>
-                <h1>share</h1>
-                <h2> your </h2>
-                <h1>contact number</h1>
-                <h2> to interact with others and </h2>
-                <h1>your digital life</h1>
-                <h2> is in </h2>
-                <h1>your control.</h1>
+                <h2>No need to</h2>
+                <h1> share </h1>
+                <h2>your</h2>
+                <h1> contact number </h1>
+                <h2>to interact with others,</h2>
+                <h1> your digital life </h1>
+                <h2>is in</h2>
+                <h1> your control.</h1>
             </div>
             <div class="reasonKey reasonKey3 hidden4">
                 <h1>Control</h1>
@@ -277,13 +277,13 @@
                 <h1>No<br>Boundaries</h1>
             </div>
             <div class="reasonDescription reasonDescription4">
-                <h1>Everyone</h1>
-                <h2> is now your </h2>
-                <h1>neighbors. Search places</h1>
-                <h2> you wish and meet </h2>
-                <h1>people</h1>
+                <h1>Everyone </h1>
+                <h2>is now your</h2>
+                <h1> neighbors. Search places </h1>
+                <h2>you wish and meet</h2>
+                <h1> people </h1>
                 <h2> whom you </h2>
-                <h1>like.</h1>
+                <h1> like.</h1>
             </div>
         </div>
     </div>
@@ -316,16 +316,16 @@
     <div class="computer">
         <div class="featureDescription">
             <div class="reasonDescription reasonDescription5">
-                <h2>We </h2>
-                <h1>do not use</h1>
-                <h2> AI to </h2>
-                <h1>addict </h1>
-                <h2> you in the platform by showing specific </h2>
-                <h1>friend suggestions.</h1>
-                <h2> Live a </h2>
-                <h1>life</h1>
-                <h2> of your </h2>
-                <h1>choice.</h1>
+                <h2>We</h2>
+                <h1> do not use AI </h1>
+                <h2>to</h2>
+                <h1> addict </h1>
+                <h2>you in the platform by showing specific</h2>
+                <h1> friend suggestions. </h1>
+                <h2>Live a </h2>
+                <h1> life </h1>
+                <h2>of your</h2>
+                <h1> choice.</h1>
             </div>
             <div class="reasonKey reasonKey5 hidden4">
                 <h1>No AI</h1>
